--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -1,2 +1,16 @@
-<h1>Hello World!</h1>
-<p>blurb</p>
+<style>
+*{
+    font-family: Arial;
+}
+</style>
+
+<title>Bas Man Dev Blog</title>
+
+<h1>Articles</h1>
+<ul>
+  <% @articles.each do |article| %>
+  <li>
+    <%= article.title %>
+  </li>
+  <% end %>
+</ul>
