--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -1,16 +1,14 @@
-<style>
-*{
-    font-family: Arial;
-}
-</style>
 
-<title>Bas Man Dev Blog</title>
+<% content_for :title, "Blog Articles | Home" %>
 
 <h1>Articles</h1>
 <ul>
   <% @articles.each do |article| %>
   <li>
-    <%= article.title %>
+    <a href="/articles/<%= article.id %>">
+      <%= article.title %>
+    </a>
+    
   </li>
   <% end %>
 </ul>
