--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -4,11 +4,8 @@
 <h1>Articles</h1>
 <ul>
   <% @articles.each do |article| %>
-  <li>
-    <a href="/articles/<%= article.id %>">
-      <%= article.title %>
-    </a>
-    
-  </li>
+    <li>
+      <%= link_to article.title, article  %>
+    </li>
   <% end %>
 </ul>
