--- a/app/views/articles/new.html.erb
+++ b/app/views/articles/new.html.erb
@@ -2,7 +2,9 @@
 
 <h1>New Article</h1>
 
-<%= form_with model: @article do |form|  %>
+<%= render "form", article: @article %>
+
+<%# <%= form_with model: @article do |form|  %>
 
   <div>
     <%= form.label :title %> <br>
@@ -23,4 +25,4 @@
   <div>
     <%= form.submit%>
   </div>
-<% end %>
+<% end %> %>
